[gd_scene load_steps=4 format=2]

[ext_resource path="res://tiles/font/game_font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/UI/BaseInfoUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/TowerInfo.gd" type="Script" id=3]

[node name="TowerInfoUI" type="Control"]
margin_left = 40.0
margin_top = 520.0
margin_right = 40.0
margin_bottom = 520.0
script = ExtResource( 3 )

[node name="BaseInfoUI" parent="." instance=ExtResource( 2 )]

[node name="Damage" type="Label" parent="."]
margin_left = 16.0
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "Damage"

[node name="DamageValue" type="Label" parent="."]
margin_left = 70.0
margin_top = 36.0
margin_right = 111.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "250"

[node name="ARate" type="Label" parent="."]
margin_left = 16.0
margin_top = 52.0
margin_right = 64.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "A.Rate"

[node name="ARateValue" type="Label" parent="."]
margin_left = 70.0
margin_top = 52.0
margin_right = 110.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "20"

[node name="Radius" type="Label" parent="."]
margin_left = 16.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
text = "Radius"

[node name="RadiusValue" type="Label" parent="."]
margin_left = 70.0
margin_top = 68.0
margin_right = 110.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
text = "120"
